nexus/deployment-nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-server
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      securityContext:
        runAsUser: 1004
        runAsGroup: 200
      nodeSelector:
        nexus: "true"
      containers:
        - name: nexus
          image: sonatype/nexus3:3.82.0
          resources:
            limits:
              memory: "12Gi"
              cpu: "3000m"
            requests:
              memory: "8Gi"
              cpu: "3000m"
          ports:
            - containerPort: 8081
            - containerPort: 8082
            - containerPort: 8083
            - containerPort: 8084
          volumeMounts:
            - mountPath: /nexus-data
              name: pv-nexus-storage
            - mountPath: /opt/sonatype/sonatype-work
              name: pv-nexus-storage
      volumes:
      - name: pv-nexus-storage
        persistentVolumeClaim:
          claimName: task-pv-claim-nexus
