nexus/deny-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deny-service
  namespace: nexus
spec:
  selector:
    app: deny-service
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
