nexus/service-nexus-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service-cluster-ip
  namespace: nexus
spec:
  selector: 
    app: nexus-server
  type: ClusterIP
  ports:
    - name: maven-port
      port: 8081
      targetPort: 9081
    - name: docker-port
      port: 8082
      targetPort: 9082
