nexus/service-nexus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
spec:
  selector: 
    app: nexus-server
  type: LoadBalancer  
  ports:
    - name: maven-port
      port: 8081
      targetPort: 8081
      nodePort: 31001
    - name: docker-port-proxy
      port: 8082
      targetPort: 8082
      nodePort: 31002
